fixing Tray overflow and removing state tracker form tray height calculation
tray overflow issue was that you couldn't scroll bring the last item into view. tray height calculation was a refinement

--- a/packages/@adobe/spectrum-css-temp/components/tray/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/tray/index.css
@@ -56,6 +56,8 @@
   position: absolute;
   bottom: 0;
   outline: none;
+  display: flex;
+  flex-direction: column;
 
   border-radius: var(--spectrum-tray-full-width-border-radius) var(--spectrum-tray-full-width-border-radius) var(--spectrum-tray-border-radius) var(--spectrum-tray-border-radius);
 
